apps/sitio-staging/sitio-wix-webhooks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sitio-wix-webhooks
  namespace: sitio-staging
  labels:
    app: sitio-wix-webhooks
    environment: sitio-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sitio-wix-webhooks
  template:
    metadata:
      labels:
        app: sitio-wix-webhooks
        environment: sitio-staging
    spec:
      containers:
        - name: sitio-wix-webhooks
          image: docker.artr.com.br/sitio-wix-webhooks-microservice:sha-15335bd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
