apps/sitio-staging/sitio-wix-webhooks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sitio-wix-webhooks
  namespace: sitio-staging
  labels:
    app: sitio-wix-webhooks
spec:
  type: ClusterIP
  selector:
    app: sitio-wix-webhooks
  ports:
    - name: http
      port: 80
      targetPort: http
